tests/bytes/errors/hex_odd_length.dby
import std.encoding as enc
print(enc.hex_decode("ABC"))
